--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "cli_to_do_rs"
-version = "0.1.0"
+version = "0.2.0-dev"
 edition = "2021"
 
 [dependencies]
-serde_json = "1.0.78"
+serde_json = "1.0.85"
+gtk4 = "0.4.8"
+
+
+[profile.release]
+lto = "thin"
