--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,22 @@
 [package]
-name = "cli_to_do_rs"
+name = "to_do"
+authors = ["twertybog"]
 version = "0.2.0-dev"
 edition = "2021"
 
 [dependencies]
 serde_json = "1.0.85"
-gtk4 = "0.4.8"
+fltk = "1.3.13"
+
+[profile.dev]
+lto = false
+opt-level = 0
 
 
 [profile.release]
-lto = "thin"
+strip = true
+lto = true
+opt-level = "z"
+codegen-units = 1
+
+
