--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "to_do"
 authors = ["twertybog"]
-version = "0.2.0-dev"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
 serde_json = "1.0.85"
-fltk = "1.3.13"
+fltk = "1.3.15"
 
 [profile.dev]
 lto = false
